[package]
name = "sql_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
# async-std = { version = "1", features = [ "attributes" ] }
tokio = {version="*", features=["full"]}
dotenv = "*"
